[project]
name = "chainlit-community"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mathijs de Bruin", email = "mathijs@mathijsfietst.nl" }
]
requires-python = ">=3.10"
dependencies = [
    "chainlit>=1.3.2",
]

[tool.uv.workspace]
members = ["packages/storage_clients/azure", "packages/storage_clients/s3", "packages/data_layers/dynamodb", "packages/data_layers/sqlalchemy"]
