[project]
name = "chainlit-community"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mathijs de Bruin", email = "mathijs@mathijsfietst.nl" }
]
requires-python = ">=3.10"
dependencies = [
    "chainlit>=1.3.2",
]

[tool.uv.workspace]
members = ["packages/storage_clients/azure", "packages/storage_clients/s3", "packages/data_layers/dynamodb", "packages/data_layers/sqlalchemy", "packages/pytest"]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[tool.pytest.ini_options]
# testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "LOG", "UP", "T10", "ISC", "ICN", "LOG", "G", "PIE", "PT", "Q", "RSE", "FURB", "RUF"]
ignore = ["E712", "E501", "UP006", "UP035","PIE790", "RUF005", "RUF006", "RUF012", "ISC001"]

[tool.ruff.lint.isort]
combine-as-imports = true
