[project]
name = "chainlit-community"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mathijs de Bruin", email = "mathijs@mathijsfietst.nl" }
]
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.0.4",
]

[tool.uv.workspace]
members = [
    "packages/storage_clients/azure",
    "packages/storage_clients/s3",
    "packages/data_layers/dynamodb",
    "packages/data_layers/sqlalchemy",
    "packages/data_layers/literalai",
    "packages/pytest"
]

[tool.uv.sources]
chainlit = { git = "https://github.com/Chainlit/chainlit.git", subdirectory = "backend/" }

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[tool.pytest.ini_options]
testpaths = ["packages/**/tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "LOG", "UP", "T10", "ISC", "ICN", "LOG", "G", "PIE", "PT", "Q", "RSE", "FURB", "RUF"]
ignore = ["E712", "E501", "UP006", "UP035","PIE790", "RUF005", "RUF006", "RUF012", "ISC001"]

[tool.ruff.lint.isort]
combine-as-imports = true
